# primitives

./: CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
docs/: 01-paradigm.md  02-layers.md  03-transitions.md  04-metacognition.md  05-mcp-contract.md  06-epistemology.md  07-agent-usage.md  08-data-lifecycle.md  README.md
src/primitives/: __init__.py  protocols.py
src/primitives/eag/: store.py
src/primitives/eag/agents/: __init__.py  base.py
src/primitives/eag/epistemology/: __init__.py  confidence.py  promotion.py  propagation.py
src/primitives/eag/queries/: cluster.py  ddl.py  silo.py
src/primitives/eag/transitions/: predicates.py
src/primitives/schema/: __init__.py  edges.py  edges_v2.py  labels.py  labels_v2.py  models.py
src/primitives/shared/: __init__.py  validators.py
src/primitives/shared/cypher/: __init__.py
tests/: test_models.py  test_promotion.py
tests/eag/epistemology/: test_propagation.py
